# opsRopz-Dashboard

./: .gitignore  .pre-commit-config.yaml  OpsRopz_Plan_de_Implementacion.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  terraform.yml
dashboard/: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
dashboard/app/: layout.tsx  page.tsx
dashboard/app/api/kpis/: route.ts
dashboard/components/: AlertsList.tsx  InventoryChart.tsx  InventoryTable.tsx  KpiCards.tsx
dashboard/lib/: api.ts  status.ts  time.ts  types.ts
docs/: event-contract.md
docs/decisions/: 0001-hybrid-aws-vps.md  0002-ssm-over-secrets-manager.md  0003-dlq-batch-failures.md  0004-dashboard-server-side-api-key.md  0005-claude-haiku-inference-profile.md  0006-terraform-remote-state.md  0007-terraform-cd-manual.md
docs/screenshots/: sample-alerts.md
infra/: api.tf  data.tf  iam.tf  lambdas.tf  main.tf  notifications.tf  observability.tf  outputs.tf  variables.tf
infra/environments/: dev.tfvars  prod.tfvars
lambdas/analyzer/: README.md  anomalies.py  bedrock_client.py  handler.py  logging_utils.py  prompts.py
lambdas/daily_report/: handler.py  logging_utils.py
lambdas/dlq_monitor/: handler.py  logging_utils.py  requirements.txt
lambdas/processor/: README.md  handler.py  kpis.py  logging_utils.py  normalize.py  requirements.txt
lambdas/query/: README.md  handler.py  logging_utils.py
vps/: crontab.example  docker-compose.yml
vps/n8n-flows/: slack-whatsapp-routing.json
vps/simulator/: README.md  events.py  main.py
(+13 files in other folders)
