[project]
name = "opsropz"
version = "0.1.0"
description = "Sistema de inteligencia operacional para retail — AWS serverless + IA generativa"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["dashboard", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length lo maneja el formatter

[tool.ruff.lint.isort]
known-first-party = ["opsropz"]

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = "dashboard"

[tool.pytest.ini_options]
testpaths = ["lambdas", "vps"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"

[tool.coverage.run]
branch = true
parallel = true  # cada Lambda se testea en su propio proceso; la cobertura se combina
source = ["lambdas", "vps"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
